# cove-meme-maker

./: .gitignore  README.md  build.ps1  pyproject.toml
.github/: RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v2.0.0.md  RELEASE_NOTES_v2.1.1.md  RELEASE_NOTES_v2.3.0.md
.github/workflows/: release.yml
packaging/: cove-meme-maker-macos.spec  cove-meme-maker.desktop  cove-meme-maker.spec  installer.iss  launcher.py
scripts/: build-macos.sh  build-release.sh  smoke_render_font.py  smoke_tab_web.py
src/cove_meme_maker/: __main__.py  app.py  chrome.py  crop_dialog.py  export_worker.py  ffmpeg_utils.py  fonts.py  image_renderer.py  text_overlay.py  theme.py  timeline.py  updater.py  video_renderer.py
src/cove_meme_maker/tab_web/: __init__.py
src/cove_meme_maker/templates/: README.md
tests/: test_updater_swap.py
